# LatentDB

./: .gitignore  ADVERTISEMENT_PLAN.md  Cargo.toml  FEATURES.md  MIGRATION_MANUAL.md  README.md
.github/workflows/: ci.yml
crates/accel/: Cargo.toml
crates/accel/src/: compute.rs  lib.rs
crates/accel/tests/: accel_tests.rs
crates/ai/: Cargo.toml
crates/ai/src/: action.rs  agents.rs  lib.rs  provider.rs  retrieval.rs
crates/ai/tests/: agents_tests.rs
crates/api/: Cargo.toml
crates/api/src/: app.rs  auth.rs  error.rs  lib.rs  main.rs
crates/api/tests/: api_tests.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: audit.rs  auth.rs  builder.rs  error.rs  field.rs  flags.rs  ids.rs  lib.rs  migration.rs  object.rs  page.rs  permission.rs  record.rs  workflow.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: analytics.rs  approval.rs  audit.rs  auth.rs  builder.rs  crypto.rs  event.rs  identity.rs  lib.rs  migration.rs  object.rs  ratelimit.rs  rbac.rs  record.rs  store.rs  task.rs  tenant.rs  transition.rs  usage.rs  workflow.rs
crates/kernel/tests/: analytics_tests.rs  builder_tests.rs  kernel_tests.rs  migration_tests.rs  security_tests.rs  workflow_tests.rs
crates/modules/: Cargo.toml
crates/modules/src/: install.rs  lib.rs  roles.rs  schema.rs
ui/: app.js  index.html  styles.css
