[workspace]
resolver = "2"
members = [
    "crates/contracts",
    "crates/kernel",
    "crates/ai",
    "crates/accel",
    "crates/modules",
    "crates/api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["LatentDB"]
rust-version = "1.80"

[workspace.dependencies]
# Internal crates
latentdb-contracts = { path = "crates/contracts" }
latentdb-kernel = { path = "crates/kernel" }
latentdb-ai = { path = "crates/ai" }
latentdb-accel = { path = "crates/accel" }
latentdb-modules = { path = "crates/modules" }

# Async + web
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1.4"

# Data
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Identity / crypto
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1.10", features = ["v7", "serde"] }

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Errors / logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Util
async-trait = "0.1"
once_cell = "1.20"

[profile.dev]
# Faster incremental builds during the alpha
opt-level = 0
debug = 1
