[package]
name = "latentdb-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "latentdb"
path = "src/main.rs"

[dependencies]
latentdb-contracts.workspace = true
latentdb-kernel.workspace = true
latentdb-ai.workspace = true
latentdb-accel.workspace = true
latentdb-modules.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
async-trait.workspace = true

[dev-dependencies]
tower = { workspace = true }
http-body-util = "0.1"
