[package]
name = "latentdb-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
latentdb-contracts.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
argon2.workspace = true
sha2.workspace = true
rand.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true }
