[package]
name = "latentdb-modules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
latentdb-contracts.workspace = true
latentdb-kernel.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
